fixes to chapter 2 and chapter 3 part 2 as a result of proofreading.

--- a/2.html
+++ b/2.html
@@ -27,7 +27,7 @@
 <p>A battery consists of a number of cells assembled in a common container and connected together to function as a source of electrical power.</p>
 
 <h4>THE CELL</h4>
-<p>A cell is a device that transforms chemical energy into electrical energy. The simplest cell, known as either a galvanic or voltaic cell, is shown in figure 2-1. It consists of a piece of carbon (C) and a piece of zinc (Zn) suspended in a jar that contains a solution of water (H20) and sulfuric acid (H2S0 4) called the electrolyte.</p>
+<p>A cell is a device that transforms chemical energy into electrical energy. The simplest cell, known as either a galvanic or voltaic cell, is shown in figure 2-1. It consists of a piece of carbon (C) and a piece of zinc (Zn) suspended in a jar that contains a solution of water (H<sub>2</sub>0) and sulfuric acid (H<sub>2</sub>S0<sub>4</sub>) called the electrolyte.</p>
 <figure data-id="2-1">Simple voltaic or galvanic cell.</figure>
 <p>The cell is the fundamental unit of the battery. A simple cell consists of two electrodes placed in a container that holds the electrolyte.</p>
 <p>In some cells the container acts as one of the electrodes and, in this case, is acted upon by the electrolyte. This will be covered in more detail later.</p>
@@ -54,8 +54,10 @@
 <h4>SECONDARY CELL</h4>
 <p>A secondary cell is one in which the electrodes and the electrolyte are altered by the chemical action that takes place when the cell delivers current. These cells may be restored to their original condition by forcing an electric current through them in the direction opposite to that of discharge. The automobile storage battery is a common example of the secondary cell.</p>
 
-<p>Q4.  What are the two types of cells?</p>
-<p>Q5.  What is the main difference between the two types of cells?</p>
+<i>
+	<p>Q4.  What are the two types of cells?</p>
+	<p>Q5.  What is the main difference between the two types of cells?</p>
+</i>
 
 <h3>ELECTROCHEMICAL ACTION</h3>
 <p>If a load (a device that consumes electrical power) is connected externally to the electrodes of a cell, electrons will flow under the influence of a difference in potential across the electrodes from the CATHODE (negative electrode), through the external conductor to the ANODE (positive electrode).</p>	
@@ -69,9 +71,10 @@
 
 <h4>PRIMARY CELL CHEMISTRY</h4>
 <p>When a current flows through a primary cell having carbon and zinc electrodes and a diluted solution of sulfuric acid and water (combined to form the electrolyte), the following chemical reaction takes place.</p>
-<p>The current flow through the load is the movement of electrons from the negative electrode of the cell (zinc) and to the positive electrode (carbon). This causes fewer electrons in the zinc and an excess of electrons in the carbon. Figure 2-1 shows the hydrogen ions (H2) from the sulfuric acid being attracted to the carbon electrode. Since the hydrogen ions are positively charged, they are attracted to the negative charge on the carbon electrode. This negative charge is caused by the excess of electrons. The zinc electrode has a positive charge because it has lost electrons to the carbon electrode. This positive charge attracts the negative ions (S04) from the sulfuric acid. The negative ions combine with the zinc to form zinc sulfate. This action causes the zinc electrode to be eaten away. Zinc sulfate is a grayish-white substance that is sometimes seen on the battery post of an automobile battery.</p>
+<p>The current flow through the load is the movement of electrons from the negative electrode of the cell (zinc) and to the positive electrode (carbon). This causes fewer electrons in the zinc and an excess of electrons in the carbon. Figure 2-1 shows the hydrogen ions (H<sub>2</sub>) from the sulfuric acid being attracted to the carbon electrode. Since the hydrogen ions are positively charged, they are attracted to the negative charge on the carbon electrode. This negative charge is caused by the excess of electrons. The zinc electrode has a positive charge because it has lost electrons to the carbon electrode. This positive charge attracts the negative ions (S0<sub>4</sub>) from the sulfuric acid. The negative ions combine with the zinc to form zinc sulfate. This action causes the zinc electrode to be eaten away. Zinc sulfate is a grayish-white substance that is sometimes seen on the battery post of an automobile battery.</p>
 <p>The process of the zinc being eaten away and the sulfuric acid changing to hydrogen and zinc sulfate is the cause of the cell discharging. When the zinc is used up, the voltage of the cell is reduced to zero.</p>
-<p>In figure 2-1 you will notice that the zinc electrode is labeled negative and the carbon electrode is labeled positive. This represents the current flow outside the cell from negative to positive.</p>	The zinc combines with the sulfuric acid to form zinc sulfate and hydrogen. The zinc sulfate dissolves in the electrolyte (sulfuric acid and water) and the hydrogen appears as gas bubbles around the carbon electrode. As current continues to flow, the zinc gradually dissolves and the solution changes to zinc sulfate and water. The carbon electrode does not enter into the chemical changes taking place, but simply provides a return path for the current.</p>
+<p>In figure 2-1 you will notice that the zinc electrode is labeled negative and the carbon electrode is labeled positive. This represents the current flow <u>outside</u> the cell from negative to positive.</p>	
+<p>The zinc combines with the sulfuric acid to form zinc sulfate and hydrogen. The zinc sulfate dissolves in the electrolyte (sulfuric acid and water) and the hydrogen appears as gas bubbles around the carbon electrode. As current continues to flow, the zinc gradually dissolves and the solution changes to zinc sulfate and water. The carbon electrode does not enter into the chemical changes taking place, but simply provides a return path for the current.</p>
 
 <i>
 	<p>Q8.  In the primary cell, why are negative ions attracted to the negative terminal of the cell?</p>
@@ -104,8 +107,10 @@
 <p>When the external circuit is removed, the current ceases to flow, and, theoretically, all chemical action within the cell stops. However, commercial zinc contains many impurities, such as iron, carbon, lead, and arsenic. These impurities form many small electrical cells within the zinc electrode in which current flows between the zinc and its impurities. Thus, the chemical action continues even though the cell itself is not connected to a load.</p>	
 <p>Local action may be prevented by using pure zinc (which is not practical), by coating the zinc with mercury, or by adding a small percentage of mercury to the zinc during the manufacturing process. The treatment of the zinc with mercury is called amalgamating (mixing) the zinc. Since mercury is many times heavier than an equal volume of water, small particles of impurities weighing less than mercury will float to the surface of the mercury. The removal of these impurities from the zinc prevents local action. The mercury is not readily acted upon by the acid. When the cell is delivering current to a load, the mercury continues to act on the impurities in the zinc. This causes the impurities to leave the surface of the zinc electrode and float to the surface of the mercury. This process greatly increases the storage life of the cell.</p>	
 
-<p>Q14.  Describe three ways to prevent polarization.</p>
-<p>Q15.  Describe local action.</p>
+<i>
+	<p>Q14.  Describe three ways to prevent polarization.</p>
+	<p>Q15.  Describe local action.</p>
+</i>
 
 <h3>TYPES OF CELLS</h3>
 <p>The development of new and different types of cells in the past decade has been so rapid that it is virtually impossible to have a complete knowledge of all the various types. A few recent developments are the silver-zinc, nickel-zinc, nickel-cadmium, silver-cadmium, organic and inorganic lithium, and mercury cells.</p>
@@ -181,7 +186,8 @@
 <i>
 	<p>Q21.  What are the four basic types of secondary (wet) cells?</p>
 	<p>Q22.  What are the advantages of a nicad cell over a lead-acid cell?</p>
-	<p>Q23.  What type of cell is most commonly used for emergency systems? Q24.  What three cells use the same electrolyte?</p>
+	<p>Q23.  What type of cell is most commonly used for emergency systems?</p>
+	<p>Q24.  What three cells use the same electrolyte?</p>
 </i>
 
 <h3>BATTERIES</h3>
@@ -235,7 +241,7 @@
 <p>The following information concerns the maintenance of secondary-cell batteries and is of a general nature. <u>You must check the appropriate technical manuals for the specific type of battery prior to performing maintenance on any battery.</u></p>	
 
 <h5>Specific Gravity</h5>
-<p>For a battery to work properly, its electrolyte (water plus active ingredient) must contain a certain amount of active ingredient. Since the active ingredient is dissolved in the water, the amount of active ingredient cannot be measured directly. An indirect way to determine whether or not the electrolyte contains the proper amount of active ingredient is to measure the electrolyte's specific gravity. Specific gravity is the ratio of the weight of a certain amount of a given substance compared to the weight of the same amount of pure water. The specific gravity of pure water is 1.0. Any substance that floats has a specific gravity less than 1.0. Any substance that sinks has a specific gravity greater than 1.0.</p>	 
+<p>For a battery to work properly, its electrolyte (water plus active ingredient) must contain a certain amount of active ingredient. Since the active ingredient is dissolved in the water, the amount of active ingredient cannot be measured directly. An indirect way to determine whether or not the electrolyte contains the proper amount of active ingredient is to measure the electrolyte's <b>specific gravity</b>. Specific gravity is the ratio of the weight of a certain amount of a given substance compared to the weight of the same amount of pure water. The specific gravity of pure water is 1.0. Any substance that floats has a specific gravity less than 1.0. Any substance that sinks has a specific gravity greater than 1.0.</p>	 
 <p>The active ingredient in electrolyte (sulfuric acid, potassium hydroxide, etc.) is heavier than water. Therefore, the electrolyte has a specific gravity greater than 1.0. The acceptable range of specific gravity for a given battery is provided by the battery's manufacturer. To measure a battery's specific gravity, use an instrument called a HYDROMETER.</p>	
 
 <h5>The Hydrometer</h5>
