--- a/4.html
+++ b/4.html
@@ -196,7 +196,7 @@
 <h4>SOLVING COMBINATION-CIRCUIT PROBLEMS</h4>
 <p>The basic technique used for solving dc combination-circuit problems is the use of equivalent circuits. To simplify a complex circuit to a simple circuit containing only one load, equivalent circuits are substituted (on paper) for the complex circuit they represent. To demonstrate the method used to solve combination circuit problems, the network shown in figure 3-54(A) will be used to calculate various circuit quantities, such as resistance, current, voltage, and power.</p>
 <figure data-id="3-54">Example combination circuit.</figure>
-<p>Examination of the circuit shows that the only quantity that can be computed with the given information is the equivalent resistance of R<sub>2</sub> and R<sub>3</sub>.</p>
+<p>Examination of the circuit shows that the only quantity that can be computed with the given information is the <u>equivalent resistance</u> of R<sub>2</sub> and R<sub>3</sub>.</p>
 <figure data-id="3-95" class="equation"></figure>
 <p>Now that the equivalent resistance for R<sub>2</sub> and R<sub>3</sub> has been calculated, the circuit can be redrawn as a series circuit as shown in figure 3-54(B).</p>
 <p>The equivalent resistance of this circuit (total resistance) can now be calculated. </p>
@@ -312,7 +312,7 @@
     <p>Q48.  If one branch of a parallel network is shorted, what portion of circuit current flows through the remaining branches?</p>
 </i>
 
-<h4>REDRAWING CIRCUITS FOR CLARITY</h4>
+<h3>VOLTAGE DIVIDERS</h3>
 <p>Most electrical and electronics equipment use voltages of various levels throughout their circuitry.</p>    
 <p>One circuit may require a 90-volt supply, another a 150-volt supply, and still another a 180-volt supply. These voltage requirements could be supplied by three individual power sources. This method is expensive and requires a considerable amount of room. The most common method of supplying these voltages is to use a single voltage source and a VOLTAGE DIVIDER. Before voltage dividers are explained, a review of what was discussed earlier concerning voltage references may be of help.</p>    
 <p>As you know, some circuits are designed to supply both positive and negative voltages. Perhaps now you wonder if a negative voltage has any less potential than a positive voltage. The answer is that 100 volts is 100 volts. Whether it is negative or positive does not affect the feeling you get when you are shocked.</p>    
@@ -371,7 +371,7 @@
 <p>The current through R<sub>2</sub> (I<sub>R2</sub>) is equal to the current through R1 plus the current through load 1.</p>
 <p>Solution:</p>    
 <figure data-id="3-120" class="equation"></figure>
-<p>The voltage across R<sub>2</sub> (E<sub>R2</sub>) is equal to the difference between the voltage requirements of load 1 and load 2.</p>    
+<p>The voltage across R<sub>2</sub> (E<sub>R2</sub>) is equal to the <u>difference</u> between the voltage requirements of load 1 and load 2.</p>    
 <figure data-id="3-121" class="equation"></figure>
 <p>Ohm’s law can now be used to solve for the value of R<sub>2</sub>.</p>
 <p>Solution:</p>    
