raw TeX for equations of chapter 3 through to number 146 added. Edits to Chapter 3 part 2 to accomodate some additional splits in equations.

--- a/4.html
+++ b/4.html
@@ -417,14 +417,24 @@
 <figure data-id="3-136" class="equation"></figure>
 <p>Calculate the value of R<sub>1</sub>.</p>
 <figure data-id="3-137" class="equation"></figure>
+<p>Calculate the current through R<sub>2</sub> using Kirchhoff's current law.</p>
+<figure data-id="3-137a" class="equation"></figure>
 <p>(or 195mA leaving point A)</p>
 <p>Since E<sub>R2</sub> = E load 2, you can calculate the value of R<sub>2</sub>.</p>
 <figure data-id="3-138" class="equation"></figure>
+<p>Calculate the current through R<sub>3</sub>.</p>
+<figure data-id="3-138a" class="equation"></figure>
 <p>The voltage across R<sub>3</sub> (E<sub>R3</sub>) equals the difference between the voltage requirements of loads 3 and 2. </p>
 <figure data-id="3-139" class="equation"></figure>
+<p>Calculate the value of R<sub>3</sub.></p>
+<figure data-id="3-139a" class="equation"></figure>
+<p>Calculate the current through R<sub>4</sub>.</p>
+<figure data-id="3-139b" class="equation"></figure>
 <p>The voltage across E<sub>R4</sub> equals the source voltage (E<sub>s</sub>) minus the voltage requirement of load 3 and the voltage requirement of load 1. Remember Kirchhoff’s voltage law which states that the sum of the voltage drops and emfs around any closed loop is equal to zero.</p>
 <figure data-id="3-140" class="equation"></figure>
-<p>With the calculations just explained, the values of the resistors used in the voltage /divider are as follows:</p>
+<p>Calculate the value of R<sub>4</sub>.</p>
+<figure data-id="3-140a" class="equation"></figure>
+<p>With the calculations just explained, the values of the resistors used in the voltage/divider are as follows:</p>
 <figure data-id="3-141" class="equation"></figure>
 <p>From the information just calculated, any other circuit quantity, such as power, total current, or resistance of the load, could be calculated.</p>
 
@@ -433,7 +443,10 @@
 <p>The value of the remaining resistors in the voltage divider is computed from the current through the remaining resistors and the voltage across them. These values <u>must be used</u> to provide the required voltage and current to the loads.</p>
 <p>If the computed values for the divider resistors are not even values; series, parallel, or series-parallel networks can be used to provide the required resistance.</p>
 <p>Example: A voltage divider is required to supply two loads from a 190.5 volts source. Load 1 requires +45 volts and 210 milliamps; load 2 requires +165 volts and 100 milliamps.</p>
+<p>Calculate the bleeder current using the rule-of-thumb.</p>
 <figure data-id="3-142" class="equation"></figure>
+<p>Calculate the ohmic value of the bleeder resistor.</p>
+<figure data-id="3-142a" class="equation"></figure>
 <p>Since it would be difficult to find a resistor of 1451.6 ohms, a practical choice for R<sub>1</sub> is 1500 ohms. </p>
 <p>Calculate the actual bleeder current using the selected value for R<sub>1</sub>.</p>
 <figure data-id="3-143" class="equation"></figure>
