hides end of chapter questions

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				
 			</div>
 		</div>
-		<div class="row">
+		<!-- <div class="row">
 			<div class="col quiz-area">
 				<h3>QUIZ</h3>
 				<div class="quiz" ng-repeat="question in chapterQuestions">
@@ -82,7 +82,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 
 	<div class="container" ng-show="testing">
