Adding equation images

--- a/1.html
+++ b/1.html
@@ -695,20 +695,16 @@ The physical size of the resistor is related to its wattage rating, which is the
 <h4>Wattage Rating</h4>
 <p>When a current is passed through a resistor, heat is developed within the resistor. The resistor must be capable of dissipating this heat into the surrounding air; otherwise, the temperature of the resistor rises causing a change in resistance, or possibly causing the resistor to burn out.</p>
 
+<figure data-id="1-30" class="float-right">Resistors of different wattage ratings.</figure>
+
 <p>The ability of the resistor to dissipate heat depends upon the design of the resistor itself. This ability to dissipate heat depends on the amount of surface area which is exposed to the air. A resistor designed to dissipate a large amount of heat must therefore have a large physical size. The heat dissipating capability of a resistor is measured in WATTS (this unit will be explained later in chapter 3). Some of the more common wattage ratings of carbon resistors are: one-eighth watt, one-fourth watt, one-half watt, one watt, and two watts. In some of the newer state-of-the-art circuits of today, much smaller wattage resistors are used. Generally, the type that you will be able to physically work with are of the values given. The higher the wattage rating of the resistor the larger is the physical size. Resistors that dissipate very large amounts of power (watts) are usually wirewound resistors. Wirewound resistors with wattage ratings up to 50 watts are not uncommon. Figure 1-30 shows some resistors which have different wattage ratings. Notice the relative sizes of the resistors.</p>
 
-<figure data-id="1-30" class="float-right">Resistors of different wattage ratings.</figure>
 
 <h4>Standard Color Code System</h4>
 <p>In the standard color code system, four bands are painted on the resistor, as shown in figure 1-31.</p>
 
-<figure data-id="1-30" class="image">Resistors of different wattage ratings.</figure>
-
-<figure data-id="1-31" class="float-right">Resistor color codes.</figure>
-
 <!-- Examples of color resistor codes --> 
-<figure data-id="1-31" class="image"></figure>
-
+<!-- <figure data-id="1-31" class="image"></figure> -->
 
 <p>The color of the first band indicates the value of the first significant digit. The color of the second band indicates the value of the second significant digit. The third color band represents a decimal multiplier by which the first two digits must be multiplied to obtain the resistance value of the resistor.</p>
 
@@ -781,7 +777,7 @@ The physical size of the resistor is related to its wattage rating, which is the
     </tbody>
 </table>
 
-
+<figure data-id="1-31" class="float-right">Resistor color codes.</figure>
 
 <p>There are many other memory aid sentences that you might want to ask about from experienced technicians. You might find one of the other sentences easier to remember.</p>
 
