--- a/3.html
+++ b/3.html
@@ -210,15 +210,15 @@
 
 <p>The resistance of this circuit is 2 ohms; this value does not change. Voltage (E) is increased (by increasing the voltage source), in steps of 1 volt, from 0 volts to 8 volts. By applying Ohm’s law, the current (I) is determined for each step of voltage. For instance, when E is 1 volt, the current is:</p>
 
-<figure data-id="3-15" class="equation"></figure>
+<figure data-id="3-9-0" class="equation"></figure>
 
 <figure data-id="3-9" class="float-right">Graph of power related to changing voltage.</figure>
 
 <p>Power (P), in watts, is determined by applying the basic power formula:</p>
 
-<figure data-id="3-16" class="equation"></figure>
+<figure data-id="3-9-1" class="equation"></figure>
 <p>and</p>
-<figure data-id="3-17" class="equation"></figure>
+<figure data-id="3-9-2" class="equation"></figure>
 
 <p>You should notice that when the voltage was increased to 2 volts, the power increased from .5 watts to 2 watts or 4 times. When the voltage increased to 3 volts, the power increased to 4.5 watts or 9 times. This shows that if the resistance in a circuit is held constant, the power varies directly with the SQUARE OF THE VOLTAGE. </p>
 
@@ -228,21 +228,17 @@
 
 <p>Another important relationship may be seen by studying figure 3-10. Thus far, power has been calculated with voltage and current (P = E x I), and with voltage and resistance </p>
 
-<figure data-id="3-19" class="equation"></figure>
-
-<p>Referring to figure 3-10, note that power also varies as the square of current just as it does with voltage. Thus, another formula for power, with current and resistance as its factors, is P = I 2R. This can be proved by:</p>
+<figure data-id="3-9-4" class="equation"></figure>
 
 <p>Referring to figure 3-10, note that power also varies as the square of current just as it does with voltage. Thus, another formula for power, with current and resistance as its factors, is P = I 2R. This can be proved by:</p>
 
 <figure data-id="3-20" class="equation"></figure>
 
-<figure data-id="3-10" class="float-right">Graph of power related to changing current.</figure>
 
 <p>Up to this point, four of the most important electrical quantities have been discussed. These are voltage (E), current (I), resistance (R), and power (P). You must understand the relationships which exist among these quantities because they are used throughout your study of electricity. In the preceding paragraphs, P was expressed in terms of alternate pairs of the other three basic quantities E, I, and R. In practice, you should be able to express any one of these quantities in terms of any two of the others. </p>
 
 <p>Figure 3-11 is a summary of 12 basic formulas you should know. The four quantities E, I, R, and P are at the center of the figure. Adjacent to each quantity are three segments. Note that in each segment, the basic quantity is expressed in terms of two other basic quantities, and no two segments are alike. </p>
 
-<figure data-id="3-11" class="float-right">Summary of basic formulas.</figure>
 
 <p>For example, the formula wheel in figure 3-11 could be used to find the formula to solve the following problem</p> 
 
@@ -251,11 +247,17 @@
 <p>Since R is the quantity you have been asked to find, look in the section of the wheel that has R in the center. The segment</p>
 <figure data-id="3-20a" class="equation"></figure>
 
+
 <p>contains the quantities you have been given. The formula you would use is </p>
 <figure data-id="3-21" class="equation"></figure>
 
+
 <p>The problem can now be solved. </p>
 <figure data-id="3-22" class="equation"></figure>
+
+<figure data-id="3-10" class="float-right">Graph of power related to changing current.</figure>
+
+<figure data-id="3-11" class="float-right">Summary of basic formulas.</figure>
 
 <p><i>Q9. What is the term applied to the rate at which a mechanical or electrical force causes motion?</i></p>
 
@@ -407,6 +409,7 @@
 <figure data-id="3-19" class="float-right">Solving for total power in a series circuit.</figure>
 
 <figure data-id="3-34" class="equation"></figure>
+<figure data-id="3-34 copy3" class="equation" width="304" ></figure>
 
 <p>By using the total resistance and the applied voltage, the circuit current is calculated. </p>
 
