Fixing sizes and accuracy of equation screen shots

--- a/3.html
+++ b/3.html
@@ -234,13 +234,14 @@
 
 <figure data-id="3-20" class="equation"></figure>
 
+<figure data-id="3-10" class="float-right">Graph of power related to changing current.</figure>
+<figure data-id="3-11" class="float-right">Summary of basic formulas.</figure>
 
 <p>Up to this point, four of the most important electrical quantities have been discussed. These are voltage (E), current (I), resistance (R), and power (P). You must understand the relationships which exist among these quantities because they are used throughout your study of electricity. In the preceding paragraphs, P was expressed in terms of alternate pairs of the other three basic quantities E, I, and R. In practice, you should be able to express any one of these quantities in terms of any two of the others. </p>
 
 <p>Figure 3-11 is a summary of 12 basic formulas you should know. The four quantities E, I, R, and P are at the center of the figure. Adjacent to each quantity are three segments. Note that in each segment, the basic quantity is expressed in terms of two other basic quantities, and no two segments are alike. </p>
 
-
-<p>For example, the formula wheel in figure 3-11 could be used to find the formula to solve the following problem</p> 
+<p>For example, the formula wheel in figure 3-11 could be used to find the formula to solve the following problem:</p> 
 
 <p>A circuit has a voltage source that delivers 6 volts and the circuit uses 3 watts of power. What is the resistance of the load? </p>
 
@@ -254,10 +255,6 @@
 
 <p>The problem can now be solved. </p>
 <figure data-id="3-22" class="equation"></figure>
-
-<figure data-id="3-10" class="float-right">Graph of power related to changing current.</figure>
-
-<figure data-id="3-11" class="float-right">Summary of basic formulas.</figure>
 
 <p><i>Q9. What is the term applied to the rate at which a mechanical or electrical force causes motion?</i></p>
 
@@ -409,7 +406,6 @@
 <figure data-id="3-19" class="float-right">Solving for total power in a series circuit.</figure>
 
 <figure data-id="3-34" class="equation"></figure>
-<figure data-id="3-34 copy3" class="equation" width="304" ></figure>
 
 <p>By using the total resistance and the applied voltage, the circuit current is calculated. </p>
 
@@ -452,6 +448,8 @@
 <p>In solving the circuit the total resistance will be found first. Next, the circuit current will be calculated. Once the current is known, the voltage drops and power dissipations can be calculated.</p>
 
 <figure data-id="3-38" class="equation"></figure>
+<figure data-id="3-38a" class="equation"></figure>
+
 
 <p>Example: Four resistors, R<sub>1</sub> = 10 ohms, R<sub>2</sub> = 10 ohms, R<sub>3</sub> = 50 ohms, and R<sub>4</sub> = 30 ohms, are connected in series with a power source as shown in figure 3-21. The current through the circuit is 1/2 ampere. </p>
 
