icons, all appendices, config

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body ng-app="myApp" ng-controller="chapterController">
 	<header>
 		<a href="#" class="btn btn-secondary test-button"  ng-hide="testing" data-toggle="modal" data-target="#testModal">Take Test</a>
-		<a href="#" class="btn btn-secondary test-button"  ng-show="testing" ng-click="gradeTest()">Grade Test</a>
+		<!-- <a href="#" class="btn btn-secondary test-button"  ng-show="testing" ng-click="gradeTest()">Grade Test</a> -->
 		<a href="#" class="btn btn-secondary back-button" ng-show="testing" ng-click="testing=false">Back</a>
 		<div class="topicNav-area" ng-hide="testing">
 			<a href="#" class="topicNav-button">Chapters</a>
