Fixing several missing subscripts and equations. - David

--- a/3.html
+++ b/3.html
@@ -381,7 +381,7 @@
 
 <figure data-id="3-33" class="equation"></figure>
 
-<p>NOTE: When you use Ohm’s law, the quantities for the equation MUST be taken from the SAME part of the circuit. In the above example the voltage across R2 was computed using the current through R2 and the resistance of R2.</p> 
+<p>NOTE: When you use Ohm’s law, the quantities for the equation MUST be taken from the SAME part of the circuit. In the above example the voltage across R<sub>2</sub> was computed using the current through R<sub>2</sub> and the resistance of R<sub>2</sub>.</p> 
 
 <p>The value of the voltage dropped by a resistor is determined by the applied voltage and is in proportion to the circuit resistances. The voltage drops that occur in a series circuit are in direct  proportion to the resistances. This is the result of having the same current flow through each resistor—the larger the ohmic value of the resistor, the larger the voltage drop across it. </p>
 
@@ -395,7 +395,7 @@
 
 <h5>Power in a Series Circuit</h5>
 
-<p>Each of the resistors in a series circuit consumes power which is dissipated in the form of heat. Since this power must come from the source, the total power must be equal to the power consumed by the circuit resistances. In a series circuit the total power is equal to the SUM of the power dissipated by the individual resistors. Total power (PT) is equal to:</p>
+<p>Each of the resistors in a series circuit consumes power which is dissipated in the form of heat. Since this power must come from the source, the total power must be equal to the power consumed by the circuit resistances. In a series circuit the total power is equal to the SUM of the power dissipated by the individual resistors. Total power (P<sub>T</sub>) is equal to:</p>
 
 <p>P<sub>T</sub> = P<sub>1</sub> + P<sub>2</sub>  + P<sub>3</sub> . . .P<sub>n</sub> </p>
 
@@ -656,7 +656,7 @@
 
 <figure data-id="3-35" class="float-right">Effect of internal resistance.</figure>
 
-<p>The effect of the source resistance on the power output of a dc source may be shown by an analysis of the circuit in figure 3-36. When the variable load resistor (RL) is set at the zero-ohm position (equivalent to a short circuit), current (I) is calculated using the following formula: </p>
+<p>The effect of the source resistance on the power output of a dc source may be shown by an analysis of the circuit in figure 3-36. When the variable load resistor (R<sub>L</sub>) is set at the zero-ohm position (equivalent to a short circuit), current (I) is calculated using the following formula: </p>
 
 <figure data-id="3-52" class="equation"></figure>
 
@@ -664,7 +664,7 @@
 
 <figure data-id="3-36" class="float-right">Effect of source resistance on power output.</figure>
 
-<p>If the load resistance (RL) were increased (the internal resistance remaining the same), the current drawn from the source would decrease. Consequently, the voltage drop across the internal resistance would decrease. At the same time, the terminal voltage applied across the load would increase and approach a maximum as the current approaches zero amps.</p> 
+<p>If the load resistance (R<sub>L</sub>) were increased (the internal resistance remaining the same), the current drawn from the source would decrease. Consequently, the voltage drop across the internal resistance would decrease. At the same time, the terminal voltage applied across the load would increase and approach a maximum as the current approaches zero amps.</p> 
 
 <h4>POWER TRANSFER AND EFFICIENCY</h4> 
 
@@ -703,7 +703,7 @@
 <h4>PARALLEL CIRCUIT CHARACTERISTICS</h4>
 <p>A PARALLEL CIRCUIT is defined as one having more than one current path connected to a common voltage source. Parallel circuits, therefore, must contain two or more resistances which are not connected in series. An example of a basic parallel circuit is shown in figure 3-37.</p>    
 <figure data-id="3-37">Example of a basic parallel circuit.</figure>
-<p>Start at the voltage source (E<sub>s</sub>) and trace counterclockwise around the circuit. Two complete and separate paths can be identified in which current can flow. One path is traced from the source, through resistance R<sub>1</sub>, and back to the source. The other path is from the source, through resistance R2, and back to the source.</p>    
+<p>Start at the voltage source (E<sub>s</sub>) and trace counterclockwise around the circuit. Two complete and separate paths can be identified in which current can flow. One path is traced from the source, through resistance R<sub>1</sub>, and back to the source. The other path is from the source, through resistance R<sub>2</sub>, and back to the source.</p>    
 
 <h5>Voltage in a Parallel Circuit</h5>
 <p>You have seen that the source voltage in a series circuit divides proportionately across each resistor in the circuit. IN A PARALLEL CIRCUIT, THE SAME VOLTAGE IS PRESENT IN EACH BRANCH. (A branch is a section of a circuit that has a complete path for current.) In figure 3-37 this voltage is equal to the applied voltage (E<sub>s</sub>). This can be expressed in equation form as:</p>    
@@ -920,7 +920,7 @@
 <p>Figure 3-55 is a typical combination circuit. To make sure you understand the techniques of solving for the unknown quantities, solve for E<sub>R1</sub>.</p>
 <figure data-id="3-55">Combination practice circuit.</figure>
 <p>It is not necessary to solve for all the values in the circuit to compute the voltage drop across resistor R<sub>1</sub> (E<sub>R1</sub>). First look at the circuit and determine that the values given do not provide enough information to solve for E<sub>R1</sub> directly.</p>
-<p>If the current through R<sub>1</sub> (I<sub>R1</sub>) is known, then ER1 can be computed by applying the formula:</p>
+<p>If the current through R<sub>1</sub> (I<sub>R1</sub>) is known, then E<sub>R1</sub> can be computed by applying the formula:</p>
 <figure data-id="3-103" class="equation"></figure>
 <p>The following steps will be used to solve the problem.</p>
 <ol>
